tests/kustomization/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-test
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-production
        ingress.kubernetes.io/force-ssl-redirect: "true"
        kubernetes.io/ingress.class: contour
        kubernetes.io/tls-acme: "true"
spec:
    tls:
    -   secretName: ingress-tls
        hosts:
        - ENC[AES256_GCM,data:8MsPq0Umf6TFosCiq0TJ+g==,iv:c7m0c3AsncLkhZo/c6ZAvB9pdbVylz5RkJWuz+R04MQ=,tag:znZthG+ZNRrhG1+UYaGRkg==,type:str]
    rules:
    -   host: ENC[AES256_GCM,data:Gnx1mp+qzEF715zNNYYoDw==,iv:91zIHxZ+uLNrkLrA2xpkruDd7z/NheI6N7zNJHDpsz0=,tag:mVja7x3GsWRTU3e+YQoPlg==,type:str]
        http:
            paths:
            -   path: /
                pathType: Prefix
                backend:
                    service:
                        name: ingress-test
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    lastmodified: '2020-11-17T10:16:26Z'
    mac: ENC[AES256_GCM,data:y6/H2dNfnztQaYcSVNTvHDV/qGiXMt8aVBCE1UV6QEDljfSb4v7hEMZi1FwozwM2ZALjqzWCNs8WbzPANLuQ4HFrwgYC4zXYEHX4R7/ge6foFjj2AkdzkNzh4mELbeGpKhl4s03ghnWyqMSOvG0SELhnhR5G+UAx+xBhwjwSqOA=,iv:KCms5N284jU7FrsPVnO1Le7qLNwpuBUluiZ4vNsbz78=,tag:MHQE+JTB0Qo/1DT4RIWXTg==,type:str]
    pgp:
    -   created_at: '2020-11-17T10:11:43Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQGMAz4C2gJ0UQlQAQwArxSXveZsvn5mmtRSVmopf218GnkyuoPA1FiCJL8CbPVR
[...]
            8NTaIQCwDg4lgiCIGnkt
            =QLG0
            -----END PGP MESSAGE-----
        fp: EBC846D0169D43A96ABA1C31AD471BDF8E8A0484
    encrypted_regex: ^(host|hosts)$
    version: 3.6.1
